# octoglow

./: .gitignore  Cargo.toml  LICENSE  README.md  crux.yaml  octoglow.cabal  package.json
archive/: .gitignore
archive/frontend/: index.html  main.js  style.css
crates/octoglow/: Cargo.toml  build.rs  tauri.conf.json
crates/octoglow-config-ui/: Cargo.toml  tauri.conf.json
crates/octoglow-config-ui/src/: main.rs
crates/octoglow-config-ui/ui/: index.html  main.js  styles.css
crates/octoglow/src/: app.rs  config_ui.rs  main.rs  playlist.rs  traversal.rs
crates/octoglow/ui/: styles.css
crates/scrnsave/: Cargo.toml
crates/scrnsave/src/: lib.rs
frontend/: index.html  main.js  style.css
s/: build
src/: Main.cx  Main.hs  main.cx
xtask/: Cargo.toml
xtask/src/: main.rs
