[package]
name = "octoglow-config-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
toml = "0.9"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
